--- a/ref.bib
+++ b/ref.bib
@@ -21,6 +21,13 @@
         howpublished = "\url{https://computing.llnl.gov/tutorials/moab}",
 }
 
+@MISC{apex-workflow,
+	 title = {{APEX Workflows}},
+	 author = {{LANL, NERSC, SNL}},
+	 year = {November 24, 2015},
+	 howpublished = "\url{https://www.nersc.gov/assets/Crossroads--NERSC-9-RFP/apex-workflow-v1.pdf}",
+}
+
 @MISC{Cobalt,
 	 title = {{Cobalt Resource Manager}},
 	 author = {Paul Rich, et al.},
