--- a/scheduler.tex
+++ b/scheduler.tex
@@ -12,64 +12,51 @@
 
 The traditional batch scheduler on system without burst buffer only
 takes job size (required number of nodes) and expected runtime into scheduling decision making. 
-The most commonly used scheduling policy are First Come First Serve with EASY backfilling~\cite{tsafrir-tpds-2007}.
+The most commonly used scheduling policy are First Come First Serve with
+EASY backfilling~\cite{tsafrir-tpds-2007}.
 However, on burst buffer enabled systems, 
-the available amount of burst buffer capacity becomes the new scheduling constraint. 
-Thus, we propose Cerberus, 
-the batch scheduler with burst buffer awareness for 3-phase modeled jobs. 
-
-% \subsection{Cerberus for 3-Phase Jobs}
-% Traditional batch scheduler usually looks at the field of $c_i$ and $rt_i$
-% when making scheduling decision.
-% One straightforward way to make decisions on non-burst-buffer HPC system is
-% First Come First Serve, as long as available compute nodes can satisfy user job.
-% Once the system is equipped with burst buffer, scheduler must consider a new constraint:
-% the available amount of burst buffer capacity.
-% Scheduling is divided into 3 phases to
-% adopt to the 3-phase characteristic of jobs in burst buffer context.
-% As shown in Figure~\ref{Fig:CerberusQueues},
-% Cerberus schedules jobs in 3 distinct set/queue.
-% The input queue $Q_I$ contains all the jobs that
-% needs to load input data before they are able to execute.
-% Once a job comes out of input queue, its data flows from external disk
-% to burst buffer nodes, indicated by the red arrow.
-% Compute nodes are not allocated to the application until
-% data flows from burst buffer to memory on compute nodes.
-% The run queue $Q_R$ contains all the jobs waiting to be run with loaded data.
-% Before executing, input data must be transfered to memory on compute nodes,
-% after which burst buffer used for stage-in can be released.
-% When running application request checkpointing, its execution and data are
-% pushed to its exclusive burst buffer nodes;
-% when application resume from system fault, its checkpointing are
-% loaded directly from burst buffer, instead of PFS, to compute nodes.
-% The output queue $Q_O$ contains all the jobs that
-% terminate execution but needs to write output data to external storage.
-% As soon as output data is moved from memory to burst buffer nodes allocated for stage-out,
-% compute nodes can be released;
-% in other words, other applications ready to run can take up them now.
-% At anytime, a job can only appear in one of the 3 sets, apparently.
-% This fact motivates separated scheduling idiom to be used in different phases,
-% or for different job queues.
-
-%==================XY==============================
-
-As shown in Figure~\ref{Fig:CerberusQueues},
-the input queue $Q_I$ contains all the jobs that
+the available amount of burst buffer capacity becomes a new scheduling constraint.
+On the foundation of 3-phase job model,
+we propose Cerberus, the batch scheduler with burst buffer awareness.
+Cerberus is burst buffer aware because it fully takes the advantage of the 
+most common usage cases of burst buffer: data stage-in, checkpointing, and data drain-out.
+Burst buffer are allocated in each phase by Cerberus for one of the three usage.
+This is done by maintaining 3 distinct queues, as shown in Figure~\ref{Fig:CerberusQueues},
+Before entering each phase, job must enqueue to the corresponding queue.
+The input queue $Q_I$ contains all the jobs that
 needs to pre-fetch data from external storage to burst buffer.
-When the data flows from external disk
-to burst buffer nodes, indicated by the red arrow, the job enters the run queue $Q_R$, 
-waiting for compute nodes to be allocated.
-Once the job gets the required number of compute nodes, it can start to run.
-There might be frequent data exchange between burst buffer and compute nodes during the running phase. 
-The job enters the output queue $Q_O$ after finishing computation, 
-and waits for its output data being drained out to external storage. 
+The running queue $Q_R$ holds jobs
+waiting for compute nodes and burst buffer used for checkpointing.
+Jobs waiting to drain out output data to external permanent storage are in output queue $Q_O$.
 
-There could be multiple jobs waiting in each queue at the same time. 
-Cerberus schedules the jobs in each queue separately, 
-rather than being held in a particular queue and waiting for certain resources.
+To see how Cerberus schedules a particular job with 3 queues,
+we have drawn a job's transition diagram in Figure~\ref{Fig:JobFSM}.
+Upon submission, the job is enqueued into $Q_I$ to wait for stage-in-purpose burst buffer($bb\_in$).
+When selected by Cerberus, job will be removed from $Q_I$ and
+start to stage in data using allocated $bb\_in$.
+After finishing stage-in phase, the job is enqueued to $Q_R$, where it waits for
+compute nodes and \textit{new} burst buffer specific for checkpointing($bb\_run$).
+Notice that right now, $bb\_in$ is still hold by this job.
+At some time, Cerberus choose this job from $Q_R$.
+Now the job is in running phase.
+The first thing is to release $bb\_in$ after fetching in data to memory on the acquired compute nodes.
+During executing, checkpointing and application restart may happen frequently, which in essential
+are data exchanges between memory and burst buffer $bb\_run$.
+Once job execution finishes, $bb\_run$ can be immediately released since
+output data are still available on the compute nodes.
+Keeping holding these compute nodes, job enters $Q_O$ and waits for a certain amount of burst
+buffer $bb\_out$ for staging out its data.
+Upon job being chosen by Cerberus, its data first flow from main memory to burst buffer
+in the drain-out phase, after which all compute nodes can be released;
+then burst buffer nodes is responsible for transfer output data to external storage system.
+The lifetime of a job concludes when all useful data results are stored
+and $bb\_out$ are returned to system.
+As indicated by Figure~\ref{Fig:JobFSM}, resource release at anytime will trigger Cerberus
+scheduling jobs in possible multiple queues.
+
 
 \subsection{Coordination Among Three Phases}
-There are few things to notice.
+The three phases of jobs, together with corresponding queues, are not entirely independent.
 First, for a given job, its three phases are temporally dependent.
 That is, only after finishing stage-in phase can a job be ready for running;
 similarly, only when finishing running phase can a job waiting or entering stage-out phase.
