--- a/bbscheduler.tex
+++ b/bbscheduler.tex
@@ -456,7 +456,7 @@ managing resources allocation in different phases.
 In both stage input and output phase, Cerberus
 allocates BB resources so that data transfer throughput
 between BB and external storage system is maximized.
-\TODO{In the running phase, it maximizes the predefined profit of scheduled jobs.}
+In the running phase, it maximizes the predefined profit of scheduled jobs.
 Simulation results of Cerberus scheduling the
 BB-enabled supercomputer platform demonstrates that
 1) comparing to non-BB system, 
