--- a/intro.tex
+++ b/intro.tex
@@ -166,11 +166,11 @@ In the remainder of this paper,
 the next section talks about the status quo of burst buffer and
 the motivation of our work.
 Section~\ref{Sec:Model} begins elaborating the 3-phase model,
-after which Cerberus is introduced.
+after which Cerberus is introduced in Section~\ref{Sec:Scheduler}.
 Core events in simulating Cerberus and execution logic of BBSim are
 briefly discussed in Section~\ref{Sec:Simulation}.
 The details of formulating and solving scheduling problems with
-dynamic programming at each phase are enumerated in Section~\ref{Sec:Scheduler}.
+dynamic programming at each phase are enumerated in Section~\ref{Sec:Opt}.
 We validate Cerberus by simulating the burst buffer enabled
 Trinity supercomputing platform on BBSim (Section~\ref{Sec:Experiments}).
 Related works are discussed in Section~\ref{Sec:RelatedWorks}.
