--- a/scheduler.tex
+++ b/scheduler.tex
@@ -2,16 +2,9 @@
 \label{Sec:Scheduler}
 
 \begin{figure}[htp]
-        \centering
-        \includegraphics[width=3.6in]{CerberusBBSystem}
-        \caption{Scheduling Workflow of Burst Buffer Aware Cerberus}
-        \label{Fig:CerberusQueues}
-\end{figure}
-
-\begin{figure}[htp]
 \centering
         \includegraphics[width=3.6in]{3PhaseJobFSM}
-        \caption{Event-driven BBsim scheduling model}
+        \caption{State Transitions of Jobs Scheduled by Cerberus}
 \label{Fig:JobFSM}
 \end{figure}
 
