--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,29 +1,25 @@
 \section{Conclusion and Future Works}
 \label{Sec:Conclusion}
 
-In this study we explore the way HPC workload scheduler allocates burst buffer,
-a new kind of storage resource that absorbs 3 general types of IO operations:
+In this study we explore batch scheduler allocates burst buffer,
+a new storage resource that absorbs 3 general types of IO operations:
 data staging in, application checkpointing, and data staging out.
-We propose a 3-phase job model specially
-tailored to burst buffer's typical usage scenarios.
-A new burst buffer aware batch scheduler Cerberus is presented
-on the basis of the 3-phase job model.
-We divide the job scheduling problem into 3 sub-phases
+We propose a 3-phase job model tailored to burst buffer's typical usage scenarios.
+Buffer aware Cerberus is presented on the basis of the 3-phase job model.
+We divide the scheduling problem into 3 sub-phases
 and conquer them separately using dynamic programming based optimization.
 Simulation results show that
-Cerberus could improve application's perceived IO bandwidth significantly.
+Cerberus could improve both application's and system's performance significantly.
 
 
-Since the burst buffer enabled system is not ready for the massive 
-use by the community, 
-there is no study about the burst buffer demand of the typical scientific workloads.
-We plan to conduct comprehensive sensitivity study about the performance of Cerberus
-when scheduling workloads with diverse resource demands. Such study could provide
-valuable insight for computing facilities configuring their burst buffer subsystem.
-HPC system users can also benefit by utilizing burst buffer for developing
-their scientific applications.
-In the future, we also plan to integrate other optimization algorithms into Cerberus
-to satisfy various scheduling objectives from the community. 
-Cerberus could also become very versatile 
+%Since the burst buffer enabled system is not ready for the massive 
+%use by the community, 
+%there is no study about the burst buffer demand of the typical scientific workloads.
+We plan to study how well Cerberus could schedule workloads with diverse resource demands,
+which provides valuable insight for computing facilities
+configuring their burst buffer subsystem.
+Other optimization algorithm can be integrated into Cerberus
+to satisfy various scheduling objectives.
+We also plan to make Cerberus more versatile
 to deal with other new schedulable system resources.
 
