--- a/ref.bib
+++ b/ref.bib
@@ -13,7 +13,6 @@
         howpublished = "\url{http://slurm.schedmd.com/burst_buffer.html}",
 }
 
-
 @MISC{Moab,
         title = {{Using Moab}},
         author = {Blaise Barney},
@@ -30,7 +29,7 @@
 
 @MISC{Cobalt,
 	 title = {{Cobalt Resource Manager}},
-	 author = {Paul Rich, et al.},
+	 author = {Paul Rich},
 	 year = {February 4, 2016},
 	 howpublished = "\url{https://trac.mcs.anl.gov/projects/cobalt}",
 }
@@ -51,17 +50,15 @@
 }
 
 @ARTICLE{tsafrir-tpds-2007, 
-author={D. Tsafrir and Y. Etsion and D. G. Feitelson}, 
-journal={IEEE Transactions on Parallel and Distributed Systems}, 
-title={Backfilling Using System-Generated Predictions Rather than User Runtime Estimates}, 
-year={2007}, 
-volume={18}, 
-number={6}, 
-pages={789-803}, 
-keywords={parallel machines;processor scheduling;EASY scheduler;backfilling algorithm;first come first serve order;parallel job scheduling algorithm;supercomputers;system-generated prediction;user runtime estimates;Accuracy;Delay effects;Dynamic scheduling;History;Job production systems;Measurement;Processor scheduling;Runtime;Scheduling algorithm;Supercomputers;EASY;EASY++;Parallel job scheduling;SJBF.;backfilling;dynamic prediction correction;history-based predictions;performance metrics;runtime estimates;system-generated predictions}, 
-doi={10.1109/TPDS.2007.70606}, 
-ISSN={1045-9219}, 
-month={June},}
+        author={D. Tsafrir and Y. Etsion and D. G. Feitelson}, 
+        journal={IEEE Transactions on Parallel and Distributed Systems}, 
+        title={Backfilling Using System-Generated Predictions Rather than User Runtime Estimates}, 
+        year={2007}, 
+        volume={18}, 
+        number={6}, 
+        pages={789-803}, 
+        month={June}
+}
 
 @TECHREPORT{TrinitySystem,
         title = {{Trinity Platform Introduction and Usage Model}},
@@ -90,7 +87,6 @@ month={June},}
         biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/RomanusRP15},
         bibsource = {dblp computer science bibliography, http://dblp.org}
 }
-
 
 @INPROCEEDINGS{Shalf:HPCCS:2010,
         author = {Shalf, John and Dosanjh, Sudip and Morrison, John},
@@ -164,29 +160,28 @@ month={June},}
 
 
 @INPROCEEDINGS{hashimoto:ICNC:2012, 
-author={Y. Hashimoto and K. Aida}, 
-booktitle={Networking and Computing (ICNC), 2012 Third International Conference on}, 
-title={Evaluation of Performance Degradation in HPC Applications with VM Consolidation}, 
-year={2012}, 
-pages={273-277}, 
-keywords={parallel processing;performance evaluation;virtual machines;HPC applications;VM consolidation;Web server applications;database applications;performance degradation;resource consumption;virtual machines;Benchmark testing;Cloud computing;Databases;Degradation;Interference;Web servers;VM consolidation;cloud computing}, 
-doi={10.1109/ICNC.2012.50}, 
-month={Dec},}
+        author={Y. Hashimoto and K. Aida}, 
+        booktitle={Networking and Computing (ICNC), 2012 Third International Conference on}, 
+        title={Evaluation of Performance Degradation in HPC Applications with VM Consolidation}, 
+        year={2012}, 
+        pages={273-277}, 
+        month={Dec}
+}
 
 @INPROCEEDINGS{dorier:IPDPS:2014,
-  title={CALCioM: Mitigating I/O interference in HPC systems through cross-application coordination},
-  author={Dorier, Matthieu and Antoniu, Gabriel and Ross, Robert and Kimpe, Dries and others},
-  booktitle={Parallel and Distributed Processing Symposium, 2014 IEEE 28th International},
-  pages={155--164},
-  year={2014},
-  organization={IEEE}
+        title={CALCioM: Mitigating I/O interference in HPC systems through cross-application coordination},
+        author={Dorier, Matthieu and Antoniu, Gabriel and Ross, Robert and Kimpe, Dries and others},
+        booktitle={Parallel and Distributed Processing Symposium, 2014 IEEE 28th International},
+        pages={155--164},
+        year={2014},
+        organization={IEEE}
 }
 
 @INPROCEEDINGS{yildiz:IPDPS:2016,
-  title={On the Root Causes of Cross-Application I/O Interference in HPC Storage Systems},
-  author={Yildiz, Orcun and Dorier, Matthieu and Ibrahim, Shadi and Ross, Rob and Antoniu, Gabriel},
-  booktitle={IPDPS-International Parallel and Distributed Processing Symposium},
-  year={2016}
+        title={On the Root Causes of Cross-Application I/O Interference in HPC Storage Systems},
+        author={Yildiz, Orcun and Dorier, Matthieu and Ibrahim, Shadi and Ross, Rob and Antoniu, Gabriel},
+        booktitle={IPDPS-International Parallel and Distributed Processing Symposium},
+        year={2016}
 }
 
 
